--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1400px) {
   #profile {
-    height: 70vh;
+    height: 83vh;
     margin-bottom: 6rem;
   }
 
@@ -55,13 +55,38 @@
   .about-containers {
     margin-top: 0;
   }
+
+  #contact {
+    margin-top: 4rem;
+    /* Add margin to separate sections */
+  }
+
+  footer {
+    margin-top: 2rem;
+    /* Add margin to separate sections */
+  }
 }
 
 @media screen and (max-width: 600px) {
 
+  .contact-info-upper-container {
+    flex-direction: column;
+    width: 90%;
+    padding: 1rem;
+  }
+
+  .contact-info-container {
+    flex-direction: column;
+    margin: 0;
+  }
+
   #contact,
   footer {
-    height: 40vh;
+    height: fit-content;
+    /* Adjust height to fit content */
+    margin-top: 2rem;
+    /* Add margin to separate sections*/
+
   }
 
   #profile {
@@ -73,10 +98,9 @@
     font-size: 1rem;
   }
 
-  nav {
+  footer nav {
     height: fit-content;
     margin-bottom: 2rem;
-
   }
 
   .about-containers,
@@ -127,9 +151,30 @@
   }
 }
 
+@media screen and (max-width: 375px) {
+  #contact {
+    height: fit-content;
+    margin-top: 1rem;
+    padding: 1rem;
+  }
 
-@media (max-width: 768px) {
-  .form-row {
+  /* .contact-info-upper-container {
     flex-direction: column;
+    width: 100%;
+    padding: 1rem;
+  } */
+
+  .contact-info-container {
+    flex-direction: column;
+    /* align-items: flex-start; */
+  }
+
+  .form-group {
+    width: 100%;
+  }
+
+  .form-group input,
+  .form-group textarea {
+    width: 100%;
   }
 }
