--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -47,14 +47,14 @@
   }
 
   .section__pic-container {
-    width: 275px;
-    height: 275px;
+    width: 500px;
+    height: 500px;
     margin: 0 auto 2rem;
   }
 
-  .about-containers {
+  /* .about-containers {
     margin-top: 0;
-  }
+  } */
 
   #contact {
     margin-top: 4rem;
@@ -65,6 +65,15 @@
     margin-top: 2rem;
     /* Add margin to separate sections */
   }
+}
+
+#projects .details-container {
+  width: 90%;
+}
+
+#projects .details-container:hover {
+  transform: translateY(-3px);
+  /* Slightly less transform effect */
 }
 
 @media screen and (max-width: 600px) {
@@ -91,7 +100,7 @@
 
   #profile {
     height: 83vh;
-    margin-bottom: 0;
+    margin-bottom: 3rem;
   }
 
   article {
@@ -134,7 +143,7 @@
 
   .section__pic-container {
     width: auto;
-    height: 46vw;
+    height: 80vw;
     justify-content: center;
   }
 
@@ -149,6 +158,18 @@
   .text-container {
     text-align: justify;
   }
+}
+
+#projects .details-container {
+  width: 100%;
+  padding: 0.5rem;
+}
+
+#projects .details-container:hover {
+  transform: translateY(-2px);
+  /* Even less transform effect */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  /* Adjust box-shadow for smaller screens */
 }
 
 @media screen and (max-width: 375px) {
@@ -176,5 +197,17 @@
   .form-group input,
   .form-group textarea {
     width: 100%;
+  }
+
+  #projects .details-container {
+    width: 100%;
+    padding: 0.5rem;
+  }
+
+  #projects .details-container:hover {
+    transform: translateY(-1px);
+    /* Minimal transform effect */
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    /* Minimal box-shadow for extra small screens */
   }
 }
