--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ section {
   padding-top: 4vh;
   height: 96vh;
   margin: 0 10rem;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   min-height: fit-content;
 }
 
@@ -171,8 +171,9 @@ section {
 
 .section__pic-container {
   display: flex;
-  height: 500px;
-  width: 500px;
+  height: 600px;
+  width: 600px;
+  /* height: auto; */
   margin: auto 0;
 }
 
@@ -195,8 +196,9 @@ section {
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
+  margin-bottom: 1rem
 }
 
 #socials-container {
@@ -266,9 +268,9 @@ section {
 }
 
 .about-containers {
-  gap: 2rem;
+  gap: 1.5rem;
   margin-bottom: 2rem;
-  margin-top: 2rem;
+  /* margin-top: 0; */
 }
 
 .about-details-container {
@@ -281,9 +283,9 @@ section {
   display: flex;
 }
 
-.about-pic {
+/* .about-pic {
   border-radius: 2rem;
-}
+} */
 
 .arrow {
   position: absolute;
@@ -302,15 +304,16 @@ section {
 }
 
 .section-container {
-  gap: 4rem;
-  height: 80%;
+  display: flex;
+  gap: 2rem;
+  /* height: 80%; */
 }
 
-.section__pic-container {
+/* .section__pic-container {
   height: 400px;
   width: 400px;
   margin: auto 0;
-}
+} */
 
 .section__pic-container img {
   border-radius: 50%;
@@ -445,7 +448,7 @@ article .icon {
   justify-content: center;
   border-radius: 2rem;
   border: 0.1rem solid rgb(163, 163, 163);
-  margin: 2rem auto;
+  /* margin: 2rem auto; */
   padding: 0.5rem;
 }
 
