--- a/style.css
+++ b/style.css
@@ -351,7 +351,7 @@ section {
 article {
   display: flex;
   width: 10rem;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   gap: 0.5rem;
 }
 
@@ -385,8 +385,6 @@ article .icon {
   color: black;
   border-color: rgb(163, 163, 163);
 }*/
-
-/* Projects Section */
 
 #projects .details-container {
   display: flex;
@@ -424,14 +422,11 @@ article .icon {
   text-align: center;
 }
 
-/* .project-btn {
-  margin: 0.5rem;
-  padding: 0.5rem 1rem;
-  border-radius: 5px;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
-} */
-
+.project-btn[data-disabled="true"] {
+  opacity: 0.5;
+  pointer-events: none;
+  cursor: not-allowed;
+}
 
 
 /* CONTACT */
@@ -441,33 +436,49 @@ article .icon {
   justify-content: center;
   flex-direction: column;
   height: 70vh;
+  margin: auto;
 }
 
-.contact-info-upper-container {
+/* .contact-info-upper-container {
   display: flex;
   justify-content: center;
   border-radius: 2rem;
   border: 0.1rem solid rgb(163, 163, 163);
-  /* margin: 2rem auto; */
+  margin: 2rem auto;
   padding: 0.5rem;
-}
+} */
 
 .contact-info-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
+  flex-wrap: wrap;
   margin: 1rem;
 }
 
 .contact-icon {
   cursor: default;
+  padding-right: 0.5rem;
 }
 
-.contact-info-container form {
+/* .contact-info-container form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+} */
+
+#contact-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 600px;
+  align-items: center;
+  width: 100%;
+  margin: 0 auto;
+  gap: 1rem;
+  border-radius: 2rem;
+  border: 0.1rem solid rgb(163, 163, 163);
+  padding: 2rem;
 }
 
 .form-group {
@@ -535,6 +546,7 @@ footer p {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
+  position: relative;
 }
 
 .close-button {
@@ -542,6 +554,10 @@ footer p {
   float: right;
   font-size: 28px;
   font-weight: bold;
+  position: absolute;
+  top: 13px;
+  right: 20px;
+  cursor: pointer;
 }
 
 .close-button:hover,
