--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ a:hover {
   text-decoration-color: rgb(181, 181, 181);
 }
 
+
+/* LOGO STYLES */
+
 .logo img,
 .profile-logo,
 .footer-logo img {
