--- a/style.css
+++ b/style.css
@@ -279,24 +279,18 @@ section {
 }
 
 .about-containers {
+  display: flex;
   gap: 1.5rem;
   margin-bottom: 2rem;
-  /* margin-top: 0; */
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .about-details-container {
+  display: flex;
   justify-content: center;
   flex-direction: column;
 }
-
-.about-containers,
-.about-details-container {
-  display: flex;
-}
-
-/* .about-pic {
-  border-radius: 2rem;
-} */
 
 .arrow {
   position: absolute;
@@ -344,11 +338,11 @@ section {
   margin-bottom: 2rem;
 }
 
-.experience-details-container {
+/* .experience-details-container {
   display: flex;
   justify-content: center;
   flex-direction: column;
-}
+} */
 
 .article-container {
   display: flex;
@@ -451,7 +445,8 @@ article .icon {
   justify-content: center;
   flex-direction: column;
   height: 70vh;
-  margin: auto;
+  /* margin: auto; */
+  margin-top: 35rem;
 }
 
 /* .contact-info-upper-container {
